05-02: Install web-push and generate keys

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "web-push": "^3.4.3"
   },
   "devDependencies": {}
 }
